--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: lachispa
 description: "LaChispa - Lightning Network wallet using LNBits backend"
 publish_to: 'none'
-version: 0.4.1
+version: 0.4.1+5
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
