--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,8 +2,10 @@
 services:
   lachispa-web:
     build:
-      context: .
-      dockerfile: Dockerfile
+      context: ..
+      dockerfile: docker/Dockerfile
+      args:
+        - FLUTTER_WEB_RENDERER=html
     container_name: lachispa-web
     ports:
       - "7777:80"
@@ -11,6 +13,17 @@ services:
     environment:
       - NGINX_HOST=localhost
       - NGINX_PORT=80
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 512M
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.lachispa.rule=Host(`lachispa.local`)"
