--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -6,6 +6,10 @@ http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
     
+    # Rate limiting
+    limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
+    limit_req_zone $binary_remote_addr zone=general:10m rate=30r/s;
+    
     # Gzip compression
     gzip on;
     gzip_vary on;
@@ -34,10 +38,12 @@ http {
         add_header X-Content-Type-Options "nosniff" always;
         add_header X-XSS-Protection "1; mode=block" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+        add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' blob:; style-src 'self' 'unsafe-inline'; img-src 'self' data: blob:; connect-src 'self' https://*.lnbits.org https://yadio.io; font-src 'self' data:;" always;
         
         # Main location for Flutter SPA
         location / {
             try_files $uri $uri/ /index.html;
+            limit_req zone=general burst=20 nodelay;
             
             # PWA headers
             add_header Cache-Control "no-cache, no-store, must-revalidate";
